editor error fixes, scrollbar

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -6,6 +6,7 @@
   max-height: 40vh;
   overflow: auto;
 }
+
 .editor {
   textarea:focus {
     outline: 0;
@@ -15,10 +16,10 @@
 .editor-error {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 50%;
   right: 0;
   bottom: 0;
-  margin: 0;
+  margin: 0 0 1rem 0.5rem;
   padding: 4rem 1rem 1rem;
   font-family: 'Fira code', monospace;
   font-size: 1.2rem;
